# viral-ink

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/: angles.yaml  sources.yaml
data/sample_persona/: ai_engineer.yaml  product_manager.yaml  startup_founder.yaml
data/sample_posts/: example_pipeline_output.json
docs/: ARCHITECTURE.md  AUTOPSY.md  CONTRIBUTING.md  CUSTOMIZATION.md  PERSONA_DNA.md  SCORING.md
src/: cli.py  main.py
src/autopsy/: __init__.py  analyzer.py  calibrator.py  digest_builder.py  hook_learner.py  memory_updater.py  persona_updater.py  report_builder.py  scheduler.py  scraper.py
src/collectors/: arxiv_collector.py  base.py  github_collector.py  news_collector.py  producthunt_collector.py  rss_collector.py
src/collectors/trend_radar/: __init__.py  momentum.py  snapshots.py  tracker.py
src/delivery/: email_builder.py  scheduler.py  sender.py  tracker.py
src/generator/: orchestrator.py  writer.py
src/generator/agents/: critic.py  researcher.py  writer.py
src/generator/prompts/: critic_prompt.py  researcher_prompt.py  revision_prompt.py  system.py  writer_prompt.py
src/hooks/: __init__.py  classifier.py  generator.py
src/persona/: analyzer.py  calibrator.py  profile_builder.py  prompt_injector.py
src/scorer/: __init__.py  engagement_scorer.py  engine.py  format_scorer.py  hook_scorer.py
src/utils/: config.py  db.py  llm.py
tests/: test_phase2.py  test_phase3.py  test_phase4.py  test_phase5_6.py  test_phase6_complete.py  test_phase6_feedback.py
